--- a/src/package.json
+++ b/src/package.json
@@ -2,11 +2,8 @@
   "name": "src",
   "version": "1.0.0",
   "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
   "author": "",
-  "license": "ISC",
+  "license": "MIT",
   "description": "",
   "dependencies": {
     "@wllama/wllama": "^2.2.0",
