--- a/src/package.json
+++ b/src/package.json
@@ -9,6 +9,7 @@
     "@wllama/wllama": "^2.2.0",
     "bootstrap": "^5.3.3",
     "bootstrap-icons": "^1.11.3",
+    "dompurify": "^3.2.4",
     "marked": "^15.0.7"
   }
 }
