--- a/conf.d/vhost.conf
+++ b/conf.d/vhost.conf
@@ -6,4 +6,9 @@ server {
         add_header Cross-Origin-Opener-Policy "same-origin";
         root /opt/local-llm-chat/;
     }
+
+    include mime.types;
+    types {
+        application/javascript js mjs;
+    }
 }
